--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -125,6 +125,8 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/jquery.js"></script>
+    <script src="/js/jquery.validate.js"></script>
+    <script src="/js/jquery.validate.min.js"></script>
     <!--SCRIPTS END-->
 
    <div class="container">
