--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,6 @@
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    
     <!--  
         Stylesheets and Preprocessors
         ==============================
@@ -104,7 +103,7 @@
       Client-side Javascript
       ========================
 
-      You can always bring in JS files manually with `script` tags, or asynchronously
+      You can always   bring in JS files manually with `script` tags, or asynchronously
       on the client using a solution like AMD (RequireJS).  Or, if you like, you can 
       take advantage of Sails' conventional asset pipeline (boilerplate Gruntfile).
 
@@ -124,6 +123,13 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/custom.js"></script>
+    <script src="/js/jquery-1.11.1.js"></script>
+    <script src="/js/jquery-1.6.4.js"></script>
+    <script src="/js/jquery-1.7.2.js"></script>
+    <script src="/js/jquery-1.8.3.js"></script>
+    <script src="/js/jquery-1.9.1.js"></script>
+    <script src="/js/jquery.form.js"></script>
     <script src="/js/jquery.js"></script>
     <script src="/js/jquery.validate.js"></script>
     <script src="/js/jquery.validate.min.js"></script>
