--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,6 +60,7 @@
       <div class="container">
         <a class="navbar-brand" href="/">Home</a>
            <a class="navbar-brand" href="/user">Users</a>
+             <a class="navbar-brand" href="/user/form">Registro</a>
       </div>
     </div>
   </head>
@@ -123,6 +124,8 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <script src="/js/custom.js"></script>
     <script src="/js/jquery-1.11.1.js"></script>
     <script src="/js/jquery-1.6.4.js"></script>
