--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,8 +1,7 @@
 			<p >&nbsp; </p>
 			<p >&nbsp; </p>
-			 
-			<div class="container"> 
-			<form role="form" method="POST"  id="form-signin"  name="form-signin" class="form-horizontal" action="/user/create">
+			 	<div class="container">
+			<form method="POST" class="form-signin" action="/user/create">
 
 				<% if(flash && flash.err) { %>
 					<ul class="alert alert-success">
@@ -11,62 +10,58 @@
 						<% }) %>
 				</ul>
 				<% } %>
-				<div class="basic-grey">
-						<h2 class="form-signin-heading">Registrarse</h2>
-					<div class="basic-grey">
-						 <label for="username">Username</label>
-						 <input type="text"   id="username" name='username' placeholder="Enter Username" />
-				    </div>
-				
-					<div class="basic-grey">
-						<label for="password">Password</label>
-						<input type="password"  name='password' id="password"placeholder="Enter Password"  />
-					</div>
+			
+					<h2 class="form-signin-heading">Registrarse</h2>
+						 <label>Username</label>
+						 <input type="text"   id="username"  class="form-control" name='username' placeholder="Enter Username" />
 
-					<div class="basic-grey">
-						<label for="password">Confirmation</label>
-						<input type="password"  name='confirmation' id="confirmation" placeholder="Password Confirmation"  />
-					</div>
+				
+						<label>Password</label>
+						<input type="password"  name='password'  class="form-control"id="password"placeholder="Enter Password"  />
+
+						<label >Confirmation</label>
+						<input type="password"   class="form-control" name='confirmation' id="confirmation" placeholder="Password Confirmation"  />
+				
 					
 				
-					<div class="basic-grey">
+	
 						 <label for="email">Email address</label>
-						 <input type="email"  name="email" id="email" placeholder="Enter Email"  />
-					</div>
+						 <input type="email"  class="form-control" name="email" id="email" placeholder="Enter Email"  />
+					
 
-					<div class="basic-grey">
+					
 						 <label for="name">Name</label>
-						 <input type="text"  id="name" name="name" placeholder="Enter Name"   />
-					</div>
+						 <input type="text"  id="name" name="name" class="form-control" placeholder="Enter Name"   />
+					
 
-					<div class="basic-grey">
+				
 						 <label for="last_name">Last Name</label>
-						 <input type="text" name= "last_name" id="last_name" placeholder="Enter Last Name"   />
-					</div>
+						 <input type="text" name= "last_name"  class="form-control" id="last_name" placeholder="Enter Last Name"   />
+				
 
-					<div class="basic-grey">
+					
 						 <label for="age">age</label>
-						 <input  type="number"  name="age" id="age" placeholder="Enter Age"  size"3"  />
-					</div>
+						 <input  type="number"  name="age"  class="form-control" id="age" placeholder="Enter Age"  size"3"  />
+					
 
-					<div class="basic-grey">
+				
 						 <label for="country">Country</label>
-						 <input type="text"  name="country" id="country" placeholder="Enter Country"  />
-					</div>
+						 <input type="text"  name="country"  class="form-control" id="country" placeholder="Enter Country"  />
+					
 
-					<div class="basic-grey">
+				
 						 <label for="genere">Genere</label>
 						 <!--<input type="text" class="form-control" name="genere" id="genere" placeholder="Enter Genere"  />-->
-						 <select name="genere" >
+						 <select   name="genere" >
 					       <option value="M" selected>M</option>
 					       <option value="F">F</option>
 	      				</select>
-					</div>
+				
 
-						 <input type="submit" class="basic-grey"/>
+						 <input type="submit" class="btn btn-lg btn-primary btn-block" value"Registrar"/>
  						 <input type="hidden" name="_csrf" value="<%= _csrf %>"/>
-				</div>
+			
 			
 			
 			</form>
-</div>
+				</div>
