--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -27,10 +27,20 @@
 			<td> <%= user.age %></td>
 			<td> <%= user.country %></td>
 			<td> <%= user.genere %></td>
+
 			<td> <a href="/user/show/<%= user.id %>" class="btn btn-sm btn-primary">Ver</a></td>
 			<td> <a href="/user/edit/<%= user.id %>" class="btn btn-sm btn-warning">Editar</a></td>
-			<td> <a href="/user/destroy/<%= user.id %>" class="btn btn-sm btn-danger">Borrar</a></td>
 
+			<td>
+				<form action="/user/destroy/<%= user.id %>" method="POST">
+						<input type="hidden" name="_method" value="delete"/>
+						<input type="submit"  class="btn btn-sm btn-danger" value="Delete"/>
+						 <input type="hidden" name="_csrf" value="<%= _csrf %>"/>
+				</form>
+
+			</td>
+
+			¡
 		</tr>
 		<% }) %>	
 
