--- a/views/session/new.ejs
+++ b/views/session/new.ejs
@@ -1,23 +1,26 @@
 	<p >&nbsp; </p>
 	<p >&nbsp; </p>
 
+
+
 		<div class="container">
-
-
-			<form method="POST" class="form-signin" action="/session/create">
-				
-			<h1 class="form-signin-heading"> Inicio de Sesion</h1>
-
-				<% if(flash && flash.err) { %>
+				<% if(flash&& flash.err) { %>
 					<ul class="alert alert-success">
 					<% Object.keys(flash.err).forEach(function(error){ %>
 						<li> <%- JSON.stringify(flash.err[error]) %></li>
 						<% }) %>
-				</ul>
+					</ul>
 				<% } %>
 
+			<form method="POST" class="form-signin" action="/session/create">
+				
+			<h1 class="form-signin-heading"> Inicio de Sesion</h1>
+			
+				
+		
+
 				 <label>Username</label>
-				 <input type="text"   id="username"  class="form-control" name='username' placeholder="Enter Username" />
+				 <input type="text"   id="email"  class="form-control" name='email' placeholder="Enter Email" />
 
 				
 				<label>Password</label>
