--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,39 +35,49 @@
     <link rel="stylesheet" href="/styles/form.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/style.css">
-    <!--STYLES END-->
-   <!--
-    <div class="container">
-  <div class="row clearfix">
-    <div class="col-md-12 column">
-      <ul class="nav nav-tabs">
-        <li class="active">
-          <a href="/">Home</a>
-        </li>
-        <li>
-          <a href="/User/form">Registro</a>
-        </li>
-
-        <li class="disabled">
-          <a href="#">Messages</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>-->
-
+   
    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/">Home</a>
-           <a class="navbar-brand" href="/user">Users</a>
-             <a class="navbar-brand" href="/user/form">Registro</a>
-      </div>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Home</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <% if(session.authenticated){ %>
+             <li class="active"><a href='/user/show/<%= session.User.id %>'><%= session.User.name %> </a> </li>
+             <li><a class="navbar-brand" href="/user">Users</a></li>
+             <li><a class="navbar-brand" href="/user/form">Registro</a></li>
+            <% } %>
+          </ul>
+          <div class="navbar-right">
+            <% if(session.authenticated) { %>
+              <a class="btn btn-default navbar-btn nabvar-rigth" href="/session/destroy">sing-out</a>
+            <%}%>
+          </div>
+            <% if(!session.authenticated) { %>
+            <form class="navbar-form navbar-right" action="/session/create">
+              <div class="form-group">
+                <input type="text" placeholder="Email" name="email" class="form-control">
+              </div>
+               <div class="form-group">
+                <input type="`password" placeholder="Password" name="password" class="form-control">
+              </div>
+              <button type="submit" class="btn btn-sucess">Sing in</button>
+              <input type="hidden" name="_csrf" value="<%= _csrf %>"/>
+            </form>
+            <%}%>
+        </div>
+        </div>
     </div>
   </head>
   <body>
 
- 
-    <%- body %>
+  <%- body %>
 
     
 
