--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -44,14 +44,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Home</a>
+          
+            <a class="navbar-brand" href="/">Home</a>
+            <a class="navbar-brand" href="/user/form">Registro</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <% if(session.authenticated){ %>
              <li class="active"><a href='/user/show/<%= session.User.id %>'><%= session.User.name %> </a> </li>
+              <% } %>
+               <% if(session.authenticated && session.User.admin){ %>
              <li><a class="navbar-brand" href="/user">Users</a></li>
-             <li><a class="navbar-brand" href="/user/form">Registro</a></li>
             <% } %>
           </ul>
           <div class="navbar-right">
@@ -65,7 +68,7 @@
                 <input type="text" placeholder="Email" name="email" class="form-control">
               </div>
                <div class="form-group">
-                <input type="`password" placeholder="Password" name="password" class="form-control">
+                <input type="`password" placeholder="password"  name="password" class="form-control">
               </div>
               <button type="submit" class="btn btn-sucess">Sing in</button>
               <input type="hidden" name="_csrf" value="<%= _csrf %>"/>
@@ -78,59 +81,6 @@
   <body>
 
   <%- body %>
-
-    
-
-
-
-    <!--
-        Client-side Templates
-        ========================
-
-        HTML templates are important prerequisites of modern, rich client applications.
-        To work their magic, frameworks like Backbone, Angular, Ember, and Knockout require
-        that you load these templates client-side.
-
-        By default, your Gruntfile is configured to automatically load and precompile
-        client-side JST templates in your `assets/templates` folder, then
-        include them here automatically (between TEMPLATES and TEMPLATES END).
-        
-        To customize this behavior to fit your needs, just edit `tasks/pipeline.js`.
-        For example, here are a few things you could do:
-
-            + Import templates from other directories
-            + Use a different template engine (handlebars, jade, dust, etc.)
-            + Internationalize your client-side templates using a server-side
-              stringfile before they're served.
-    -->
-
-    <!--TEMPLATES-->
-    
-    <!--TEMPLATES END-->
-
-
-    <!--
-
-      Client-side Javascript
-      ========================
-
-      You can always   bring in JS files manually with `script` tags, or asynchronously
-      on the client using a solution like AMD (RequireJS).  Or, if you like, you can 
-      take advantage of Sails' conventional asset pipeline (boilerplate Gruntfile).
-
-      By default, files in your `assets/js` folder are included here
-      automatically (between SCRIPTS and SCRIPTS END).  Both JavaScript (.js) and
-      CoffeeScript (.coffee) are supported. In production, your scripts will be minified
-      and concatenated into a single file.
-      
-      To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
-      For example, here are a few things you could do:
-          
-          + Change the order of your scripts
-          + Import scripts from other directories
-          + Use a different preprocessor, like TypeScript
-
-    -->
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
