--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -27,6 +27,11 @@
 			<td> <%= user.age %></td>
 			<td> <%= user.country %></td>
 			<td> <%= user.genere %></td>
+			<% if(user.admin) { %>
+			<td> <img src="/images/Crown6.jpeg"> </td>
+			<%} else {%>
+			<td> <img src="/images/User.png"> </td>
+			<% } %>
 
 			<td> <a href="/user/show/<%= user.id %>" class="btn btn-sm btn-primary">Ver</a></td>
 			<td> <a href="/user/edit/<%= user.id %>" class="btn btn-sm btn-warning">Editar</a></td>
