--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -28,7 +28,7 @@
 			<td> <%= user.country %></td>
 			<td> <%= user.genere %></td>
 			<% if(user.admin) { %>
-			<td> <img src="/images/Crown6.jpeg"> </td>
+			<td> <img src="/images/crown.jpg"> </td>
 			<%} else {%>
 			<td> <img src="/images/User.png"> </td>
 			<% } %>
@@ -45,7 +45,7 @@
 
 			</td>
 
-			¡
+			
 		</tr>
 		<% }) %>	
 
