--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -68,7 +68,7 @@
                 <input type="text" placeholder="Email" name="email" class="form-control">
               </div>
                <div class="form-group">
-                <input type="`password" placeholder="password"  name="password" class="form-control">
+                <input type="password" placeholder="password"  name="password" class="form-control">
               </div>
               <button type="submit" class="btn btn-sucess">Sing in</button>
               <input type="hidden" name="_csrf" value="<%= _csrf %>"/>
